NOTICK: Remove toggling of "final" for static final fields. Java's `putstatic` opcode can reset these fields regardless.